--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.3.0
 colorama==0.4.6
 fastapi==0.121.1
 h11==0.16.0
+httpx==0.25.2
 idna==3.11
 pydantic==2.12.4
 pydantic_core==2.41.5
@@ -13,3 +14,4 @@ starlette==0.49.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
+pytest==7.4.3
