--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,18 +6,19 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./custom-backend-ops
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
       - name: Install dependencies
         run: |
-          pip3: install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
-          pytest test/test.py
+          pytest tests/ -v
